--- a/development/src/app/app.component.html
+++ b/development/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- app.component.html -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Appdibideak</a>
+  <a class="navbar-brand" href="#">HDR</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -17,7 +17,7 @@
         <a class="nav-link" routerLink="/home">Predecir</a>
       </li>
     </ul>
-    <ul class="navbar-nav ml-auto">
+    <!-- <ul class="navbar-nav ml-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="/list-users" >Listar Usuarios</a>
       </li>
@@ -25,13 +25,12 @@
         <a class="nav-link " routerLink="/add-user" >Agregar Usuarios</a>
       </li>
 
-    </ul>
+    </ul> 
     <ul class="navbar-nav">
       <li class="nav-item">
-        <!-- Botón que activa el modal ahora es reemplazado por el componente de login -->
         <button class="btn btn-light" data-toggle="modal" data-target="#loginModal">Login</button>
       </li>
-    </ul>
+    </ul> -->
   </div>
 </nav>
 
