añadido nuevo sistema de tarjetas, enlaces etc.

--- a/development/src/app/app.component.html
+++ b/development/src/app/app.component.html
@@ -4,9 +4,8 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-    <ul class="navbar-nav mr-auto">
-      <!-- TODO: cambiar los links cuando estén los componentes programados -->
+  <!-- <div class="collapse navbar-collapse justify-content-between" id="navbarNav">-->
+    <!--<ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="/number-drawer">Introducir</a>
       </li>
@@ -16,7 +15,7 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/home">Predecir</a>
       </li>
-    </ul>
+    </ul> -->
     <!-- <ul class="navbar-nav ml-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="/list-users" >Listar Usuarios</a>
@@ -31,10 +30,10 @@
         <button class="btn btn-light" data-toggle="modal" data-target="#loginModal">Login</button>
       </li>
     </ul> -->
-  </div>
+  <!-- </div> -->
 </nav>
 
 <!-- Aquí incorporamos el componente de login que reemplazará el modal -->
-<app-user-login></app-user-login>
+<!-- <app-user-login></app-user-login> -->
 <!-- <app-navbar></app-navbar> -->
 <router-outlet></router-outlet>
