--- a/development/src/app/app.component.html
+++ b/development/src/app/app.component.html
@@ -1,9 +1,15 @@
 <!-- app.component.html -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" href="#">HDR</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <!-- <button class="navbar-toggler" type="button"  data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
+  </button> -->
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
+        (click)="navigateToWelcome()">
+  <span class="navbar-toggler-icon"></span>
+</button>
   <!-- <div class="collapse navbar-collapse justify-content-between" id="navbarNav">-->
     <!--<ul class="navbar-nav mr-auto">
       <li class="nav-item">
